<resources>
    <string name="app_name">Cybrary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_forum">Discussion Forums</string>
    <string name="action_support">Support</string>
    <string name="action_rate">Rate the App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Courses</string>
    <string name="title_activity_videoplayer">Course detail</string>
    <string name="action_jobs">Cyber Security Jobs</string>
    <string name="action_profile">My Profile</string>
    <string name="action_cybytes">Cybytes</string>
    <string name="title_activity_webview">Cybrary.it</string>
    <string name="banner_ad_unit_id">ca-app-pub-7525466411818117/8410995589</string>
    <string name="banner_ad_unit_id2">ca-app-pub-7525466411818117/9159371987</string>



</resources>
