<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_jobs"
        android:orderInCategory="100"
        android:title="@string/action_jobs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cybytes"
        android:orderInCategory="100"
        android:title="@string/action_cybytes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forum"
        android:orderInCategory="100"
        android:title="@string/action_forum"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="100"
        android:title="@string/action_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/action_signout"
        app:showAsAction="never" />

</menu>
